--- a/files/www/netdata.html
+++ b/files/www/netdata.html
@@ -21,32 +21,45 @@
   --radius-sm:8px;--radius-md:12px;--radius-lg:16px;--radius-xl:20px;--radius-2xl:24px;--radius-3xl:32px;
   --font-body:'Inter',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;
   --text-xs:.75rem;--text-sm:.875rem;--text-base:1rem;--text-lg:1.125rem;--text-xl:1.25rem;--text-2xl:1.5rem;--text-3xl:1.875rem;
+  --bg-blur:blur(8px);
 }
 
 [data-theme="dark"]{
   --bg:#1a202c;--bg2:rgba(45,55,72,.95);--bg3:#2d3748;--t1:#f7fafc;--t2:#e2e8f0;--t3:#a0aec0;--b1:#4a5568;--b2:rgba(255,255,255,.1);
   --sh:0 2px 4px rgba(0,0,0,.3);--shl:0 8px 16px rgba(0,0,0,.4);--shx:0 12px 24px rgba(0,0,0,.5);
+  --bg-blur:blur(10px);
 }
 
 [data-theme="ocean"]{
   --bg:#0f172a;--bg2:rgba(15,23,42,.95);--bg3:#1e293b;--t1:#e2e8f0;--t2:#94a3b8;--t3:#64748b;--b1:#334155;--b2:rgba(59,130,246,.1);
   --sh:0 2px 4px rgba(0,0,0,.4);--shl:0 8px 16px rgba(0,0,0,.5);--shx:0 12px 24px rgba(0,0,0,.6);
   --p:#3b82f6;--s:#06b6d4;--a:#0ea5e9;--g:#22d3ee;--w:#f59e0b;--d:#ef4444;
+  --bg-blur:blur(12px);
 }
 
 [data-theme="purple"]{
   --bg:#1e1b4b;--bg2:rgba(30,27,75,.95);--bg3:#312e81;--t1:#f8fafc;--t2:#c7d2fe;--t3:#a5b4fc;--b1:#4338ca;--b2:rgba(139,92,246,.1);
   --p:#8b5cf6;--s:#a855f7;--a:#c084fc;
+  --bg-blur:blur(10px);
 }
 
-[data-theme="sunset"]{
-  --bg:#451a03;--bg2:rgba(69,26,3,.95);--bg3:#7c2d12;--t1:#fed7aa;--t2:#fdba74;--t3:#fb923c;--b1:#ea580c;--b2:rgba(251,146,60,.1);
-  --p:#f97316;--s:#ea580c;--a:#fb923c;--g:#22c55e;--w:#fbbf24;--d:#dc2626;
+/* TEMA BARU 1: GRADIENT BLUE */
+[data-theme="gradient"]{
+  --bg:linear-gradient(135deg, #667eea 0%, #764ba2 100%);--bg2:rgba(255,255,255,.9);--bg3:rgba(255,255,255,.95);
+  --t1:#1a202c;--t2:#4a5568;--t3:#718096;--b1:#e2e8f0;--b2:rgba(255,255,255,.15);
+  --sh:0 4px 8px rgba(102,126,234,.15);--shl:0 8px 16px rgba(102,126,234,.25);--shx:0 12px 24px rgba(102,126,234,.35);
+  --p:#667eea;--s:#764ba2;--a:#f093fb;--g:#22c55e;--w:#f59e0b;--d:#ef4444;
+  --bg-blur:blur(15px);
 }
 
-[data-theme="forest"]{
-  --bg:#14532d;--bg2:rgba(20,83,45,.95);--bg3:#166534;--t1:#dcfce7;--t2:#bbf7d0;--t3:#86efac;--b1:#22c55e;--b2:rgba(34,197,94,.1);
-  --p:#22c55e;--s:#16a34a;--a:#4ade80;--g:#15803d;--w:#eab308;--d:#dc2626;
+/* TEMA BARU 2: CYBER BLUE - CYBERPUNK STYLE */
+[data-theme="cyber"]{
+  --bg:linear-gradient(135deg, #0a0a0f 0%, #1a1a2e 30%, #16213e 70%, #0f0f23 100%);
+  --bg2:rgba(0,150,255,.12);--bg3:rgba(0,200,255,.15);
+  --t1:#00d4ff;--t2:#0099ff;--t3:#0066cc;--b1:#0080ff;--b2:rgba(0,150,255,.15);
+  --sh:0 0 15px rgba(0,180,255,.4);--shl:0 0 25px rgba(0,180,255,.6);--shx:0 0 35px rgba(0,180,255,.8);
+  --p:#00b4ff;--s:#0099ff;--a:#0080ff;--g:#00ffaa;--w:#ffaa00;--d:#ff4466;
+  --bg-blur:blur(20px);
 }
 
 @media(prefers-color-scheme:dark){:root:not([data-theme]){
@@ -54,12 +67,38 @@
 }}
 
 *{margin:0;padding:0;box-sizing:border-box}
-body{font:400 1rem/1.5 var(--font-body);background:var(--bg);min-height:100vh;color:var(--t1);transition:background .3s,color .3s}
-.container{max-width:1400px;margin:0 auto;padding:12px}
+body{
+  font:400 1rem/1.5 var(--font-body);background:var(--bg);min-height:100vh;color:var(--t1);
+  transition:background .3s,color .3s;position:relative;overflow-x:hidden;
+}
+
+/* BACKGROUND BLUR EFFECT */
+body::before{
+  content:'';position:fixed;top:0;left:0;width:100%;height:100%;
+  background:inherit;filter:var(--bg-blur);opacity:.3;z-index:-2;
+}
+
+body::after{
+  content:'';position:fixed;top:0;left:0;width:100%;height:100%;
+  background:radial-gradient(circle at 20% 80%, rgba(120,119,198,.3) 0%, transparent 50%),
+             radial-gradient(circle at 80% 20%, rgba(255,119,198,.2) 0%, transparent 50%),
+             radial-gradient(circle at 40% 40%, rgba(120,219,255,.2) 0%, transparent 50%);
+  z-index:-1;opacity:.6;
+}
+
+/* CYBER THEME SPECIAL BACKGROUND EFFECTS */
+[data-theme="cyber"] body::after{
+  background:radial-gradient(circle at 20% 80%, rgba(0,180,255,.4) 0%, transparent 60%),
+             radial-gradient(circle at 80% 20%, rgba(0,120,255,.3) 0%, transparent 60%),
+             radial-gradient(circle at 40% 40%, rgba(0,200,255,.3) 0%, transparent 50%),
+             radial-gradient(circle at 60% 10%, rgba(0,150,255,.2) 0%, transparent 70%);
+}
+
+.container{max-width:1400px;margin:0 auto;padding:12px;position:relative;z-index:1}
 
 /* SIMPLE BLUR OVERLAY */
 .blur-overlay{
-  position:fixed;top:0;left:0;width:100%;height:100%;backdrop-filter:blur(8px);
+  position:fixed;top:0;left:0;width:100%;height:100%;backdrop-filter:var(--bg-blur);
   background:rgba(0,0,0,0.3);z-index:998;opacity:0;visibility:hidden;
   transition:opacity .3s,visibility .3s;
 }
@@ -72,7 +111,7 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
 .btn{
   background:var(--bg3);border:2px solid var(--b1);border-radius:25px;padding:8px 12px;
   cursor:pointer;box-shadow:var(--sh);color:var(--t1);font:600 .75rem var(--font-body);
-  transition:all .2s;
+  transition:all .2s;backdrop-filter:blur(10px);
 }
 .btn:hover{background:var(--p);color:#fff;border-color:var(--p)}
 .btn.rst:hover{background:var(--d);border-color:var(--d)}
@@ -84,6 +123,7 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
   border-radius:var(--radius-md);padding:10px 14px;box-shadow:var(--shx);
   border:1px solid var(--b1);font:600 .75rem var(--font-body);
   transform:translateX(300px);opacity:0;transition:all .3s;min-width:200px;
+  backdrop-filter:blur(15px);
 }
 .toast.show{transform:translateX(0);opacity:1}
 .toast.success{border-color:var(--g);color:var(--g)}
@@ -93,6 +133,7 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
 .header{
   text-align:center;margin-bottom:12px;padding:8px 12px;background:var(--bg2);
   border-radius:var(--radius-md);box-shadow:var(--sh);border:1px solid var(--b2);
+  backdrop-filter:blur(20px);
 }
 .header h1{
   font:700 1.25rem var(--font-body);margin-bottom:4px;
@@ -105,6 +146,7 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
 .section{
   background:var(--bg2);border-radius:var(--radius-lg);padding:16px;
   margin-bottom:16px;box-shadow:var(--shx);border:1px solid var(--b2);
+  backdrop-filter:blur(25px);
 }
 .title{
   text-align:center;font:600 1.25rem var(--font-body);color:var(--t1);margin-bottom:20px;
@@ -118,6 +160,7 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
   background:var(--bg2);border-radius:var(--radius-2xl);padding:25px;
   box-shadow:var(--shx);border:1px solid var(--b2);z-index:999;
   opacity:0;visibility:hidden;transition:opacity .3s,visibility .3s;
+  backdrop-filter:blur(30px);
 }
 .stats-modal.show{opacity:1;visibility:visible}
 
@@ -133,7 +176,7 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
 .grid-info{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;margin-bottom:16px}
 .grid-charts{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;margin-bottom:16px}
 
-/* GRID-CHARTS2 - 3 KOLOM UNTUK SEMUA DEVICE */
+/* GRID-CHARTS2 - 3 KOLOM UNTUK SEMUA DEVICE - 6 CHART TOTAL */
 .grid-charts2{display:grid;grid-template-columns:repeat(3,1fr);gap:4px;margin-bottom:8px}
 
 .grid-btns{display:grid;grid-template-columns:repeat(3,1fr);gap:10px;margin-bottom:20px}
@@ -143,6 +186,7 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
   background:var(--bg3);border-radius:var(--radius-md);padding:6px;
   box-shadow:var(--sh);border:1px solid var(--b1);min-height:110px;
   display:flex;align-items:center;justify-content:center;
+  backdrop-filter:blur(15px);
 }
 
 /* CHART KHUSUS UNTUK GRID-CHARTS2 DIPERKECIL */
@@ -155,7 +199,7 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
   background:var(--bg3);border-radius:var(--radius-sm);padding:10px;
   box-shadow:var(--sh);border:1px solid var(--b1);min-height:80px;
   display:flex;flex-direction:column;justify-content:center;align-items:center;
-  text-align:center;position:relative;
+  text-align:center;position:relative;backdrop-filter:blur(15px);
 }
 .info::before{
   content:'';position:absolute;top:0;left:0;right:0;height:2px;
@@ -181,6 +225,7 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
 .img-cnt{
   position:relative;width:100%;background:var(--bg3);border-radius:var(--radius-lg);
   box-shadow:var(--sh);border:1px solid var(--b1);padding:16px;margin:0 auto;
+  backdrop-filter:blur(20px);
 }
 .chart-img{display:none;width:100%;height:auto;border-radius:var(--radius-sm)}
 .img-cnt::before{
@@ -292,35 +337,37 @@ body.stats-open .main-content{filter:blur(4px);transition:filter .3s}
           </div>
         </div>
         
+        <!-- GRID-CHARTS DENGAN 3 CHART: ETH1, WWAN0, USB0 -->
         <div class="grid-charts">
           <div class="chart">
             <div data-netdata="net.eth1" data-title="MODEM" data-chart-library="gauge" data-after="-100" data-width="100%" data-points="720" data-gauge-generate-gradient="[0,5,10,60,100]" data-gauge-gradient-percent-color-0="#fa709a" data-gauge-gradient-percent-color-5="#fa709a" data-gauge-gradient-percent-color-10="#f093fb" data-gauge-gradient-percent-color-60="#4facfe" data-gauge-gradient-percent-color-100="#43e97b" data-colors="#667eea"></div>
           </div>
           <div class="chart">
-            <div data-netdata="net.br-lan" data-title="LAN" data-chart-library="easypiechart" data-after="-150" data-width="100%" data-points="720" data-colors="#4facfe"></div>
+            <div data-netdata="net.wwan0" data-title="WWAN" data-chart-library="gauge" data-after="-100" data-width="100%" data-points="720" data-gauge-generate-gradient="[0,5,10,60,100]" data-gauge-gradient-percent-color-0="#fa709a" data-gauge-gradient-percent-color-5="#fa709a" data-gauge-gradient-percent-color-10="#f093fb" data-gauge-gradient-percent-color-60="#4facfe" data-gauge-gradient-percent-color-100="#43e97b" data-colors="#f093fb"></div>
           </div>
           <div class="chart">
             <div data-netdata="net.usb0" data-title="HP" data-chart-library="gauge" data-after="-100" data-width="100%" data-points="720" data-gauge-generate-gradient="[0,5,10,60,100]" data-gauge-gradient-percent-color-0="#fa709a" data-gauge-gradient-percent-color-5="#fa709a" data-gauge-gradient-percent-color-10="#f093fb" data-gauge-gradient-percent-color-60="#4facfe" data-gauge-gradient-percent-color-100="#43e97b" data-colors="#43e97b"></div>
           </div>
         </div>
 
-        <!-- GRID-CHARTS2 DENGAN 6 CHART DALAM 2 BARIS (3 KOLOM) -->
+        <!-- GRID-CHARTS2 DENGAN SUSUNAN BARU: RECEIVED-LAN-SENT / CPU-RAM-LOAD -->
         <div class="grid-charts2">
+          <!-- BARIS PERTAMA: received - br-lan - sent -->
           <div class="chart">
             <div data-netdata="system.net" data-dimensions="received" data-chart-library="easypiechart" data-title="DATA RECEIVED" data-width="100%" data-points="720" data-common-units="system.net.mainhead" data-colors="#4facfe"></div>
           </div>
           <div class="chart">
-            <div data-netdata="system.cpu" data-chart-library="easypiechart" data-title="CPU USAGE" data-units="%" data-easypiechart-max-value="100" data-width="100%" data-points="720" data-colors="#f093fb"></div>
+            <div data-netdata="net.br-lan" data-title="LAN" data-chart-library="easypiechart" data-after="-150" data-width="100%" data-points="720" data-colors="#667eea"></div>
           </div>
           <div class="chart">
-            <div data-netdata="system.ram" data-dimensions="used|buffers|active|wired" data-append-options="percentage" data-chart-library="easypiechart" data-title="RAM USAGE" data-units="%" data-easypiechart-max-value="100" data-width="100%" data-points="720" data-colors="#43e97b"></div>
+            <div data-netdata="system.net" data-dimensions="sent" data-chart-library="easypiechart" data-title="DATA SENT" data-width="100%" data-points="720" data-common-units="system.net.mainhead" data-colors="#f093fb"></div>
           </div>
-          <!-- BARIS KEDUA -->
+          <!-- BARIS KEDUA: cpu - ram - load -->
           <div class="chart">
-            <div data-netdata="system.net" data-dimensions="sent" data-chart-library="easypiechart" data-title="DATA SENT" data-width="100%" data-points="720" data-common-units="system.net.mainhead" data-colors="#667eea"></div>
+            <div data-netdata="system.cpu" data-chart-library="easypiechart" data-title="CPU USAGE" data-units="%" data-easypiechart-max-value="100" data-width="100%" data-points="720" data-colors="#43e97b"></div>
           </div>
           <div class="chart">
-            <div data-netdata="system.io" data-chart-library="easypiechart" data-title="DISK I/O" data-width="100%" data-points="720" data-colors="#f59e0b"></div>
+            <div data-netdata="system.ram" data-dimensions="used|buffers|active|wired" data-append-options="percentage" data-chart-library="easypiechart" data-title="RAM USAGE" data-units="%" data-easypiechart-max-value="100" data-width="100%" data-points="720" data-colors="#f59e0b"></div>
           </div>
           <div class="chart">
             <div data-netdata="system.load" data-chart-library="easypiechart" data-title="SYSTEM LOAD" data-width="100%" data-points="720" data-colors="#ef4444"></div>
@@ -375,9 +422,9 @@ const el = {
   chartButtons: document.querySelectorAll('.chart-btn')
 };
 
-// Theme System
-const themes = ['light', 'dark', 'ocean', 'purple', 'sunset', 'forest'];
-const themeNames = ['Light', 'Dark', 'Ocean', 'Purple', 'Sunset', 'Forest'];
+// Theme System - UPDATED: Removed sunset & forest, added gradient & cyber
+const themes = ['light', 'dark', 'ocean', 'purple', 'gradient', 'cyber'];
+const themeNames = ['Light', 'Dark', 'Ocean', 'Purple', 'Gradient', 'Cyber'];
 let currentTheme = localStorage.getItem('selectedTheme') || 'light';
 
 function applyTheme() {
